bindings/allowed-capabilities-add-ephemeralcontainers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allowed-capabilities-add-ephemeralcontainers-namespace-optout-warn
spec:
  policyName: check-allowed-capabilities-add-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.kolteq.com/warn
        operator: In
        values:
        - baseline
      - key: allowed-capabilities-add-ephemeralcontainers.pss.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allowed-capabilities-add-ephemeralcontainers-namespace-optin-warn
spec:
  policyName: check-allowed-capabilities-add-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-capabilities-add-ephemeralcontainers.pss.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allowed-capabilities-add-ephemeralcontainers-namespace-optout-audit
spec:
  policyName: check-allowed-capabilities-add-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.kolteq.com/audit
        operator: In
        values:
        - baseline
      - key: allowed-capabilities-add-ephemeralcontainers.pss.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allowed-capabilities-add-ephemeralcontainers-namespace-optin-audit
spec:
  policyName: check-allowed-capabilities-add-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-capabilities-add-ephemeralcontainers.pss.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allowed-capabilities-add-ephemeralcontainers-namespace-optout-deny
spec:
  policyName: check-allowed-capabilities-add-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.kolteq.com/enforce
        operator: In
        values:
        - baseline
      - key: allowed-capabilities-add-ephemeralcontainers.pss.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allowed-capabilities-add-ephemeralcontainers-namespace-optin-deny
spec:
  policyName: check-allowed-capabilities-add-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-capabilities-add-ephemeralcontainers.pss.kolteq.com/enforce
        operator: In
        values:
        - 'true'
